# systars

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint.yml  synthesis.yml  test.yml
docs/: development-workflow.md  index.md  initial-development-environment.md  wavefront-animation.md
docs/architecture/: dma-descriptors.md
docs/design/: conv2d-architecture-options.md  simt-architecture.md  stencil-machine-microarchitecture.md
docs/plan/: implementation.md  isa-instructions.md  polarfire-deployment.md
docs/sessions/: 2025-12-15-phase2-memory-system.md  2025-12-16-examples-wavefront-animation.md  2025-12-17-skew-buffer-visualization.md  2025-12-18-isa-matmul-instruction.md  2025-12-20-simt-package-reorganization.md  2025-12-20-simt-visualization-enhancements.md  2025-12-20-sm-level-lsu-mshr.md  2025-12-21-maspar-simd-implementation.md  2025-12-23-devenv-velocity-script.md
examples/: README.md  run_all_gemm_demos.sh
examples/common/: __init__.py  cli.py  dram_model.py  tensor_utils.py
examples/conv/: 01_isa_conv2d.py  __init__.py
examples/gemm/: 01_simple_matmul.py  02_animated_wavefront.py  03_wavefront_gif.py  04_memory_dataflow.py  05_skew_buffer_timing.py  06_transpose_dma.py  07_isa_matmul.py  __init__.py
examples/simd/maspar/: 01_animated_maspar.py  02_animated_conv2d.py
examples/simt/: 01_animated_simt.py  01_animated_simt_v1.py  02_energy_comparison.py  03_gemm_functional.py
examples/simt/amd/: README.md
examples/simt/maspar/: README.md
examples/simt/nv/: 01_animated_simt.py  02_energy_comparison.py  README.md
examples/simt/nv_v1/: 01_animated_simt.py  README.md  bug_poor_latency_hiding.json  timeline-16x16-simt.csv
examples/simt/v1/: 01_animated_simt.py  README.md  timeline-16x16-simt-2.csv  timeline-16x16-simt-v1.json
examples/stencil/: 01_animated_stencil.py  02_stencil_gif.py  trace_fill.py  wf_verilog_check.py  window_former.py  window_former_2.py
scripts/: gen_mesh.py  gen_pe.py  gen_pe_array.py  gen_systolic_array.py  gen_tile.py
src/systars/: __init__.py  config.py  top.py
src/systars/controller/: __init__.py  execute.py  load.py  load_transpose.py  store.py
src/systars/core/: __init__.py  mesh.py  pe.py  pe_array.py  systolic_array.py  tile.py
src/systars/dma/: __init__.py  descriptor_engine.py  reader.py  strided_reader.py  writer.py
src/systars/isa/: __init__.py  conv2d.py  matmul.py
src/systars/memory/: __init__.py  accumulator.py  local_addr.py  scratchpad.py  skew_buffer.py
src/systars/simd/: __init__.py
src/systars/simd/maspar/: README.md  __init__.py  acu.py  config.py  instruction.py  maspar_sim.py  pe.py  pe_array.py
src/systars/simt/: README.md  __init__.py  base.py  config.py  energy_model.py  execution_unit.py  load_store_unit.py  operand_collector.py  partition.py  register_file.py  sm_controller.py  sm_lsu.py
src/systars/simt/amd/: __init__.py
src/systars/simt/maspar/: __init__.py
src/systars/simt/nv/: README.md  __init__.py  config.py  load_store_unit.py  partition.py  register_file.py  sm_lsu.py
src/systars/simt/nv_v1/: __init__.py  barrier.py  config.py  memory_coalescer.py  operand_collector.py  partition.py
src/systars/simt_v1/: README.md  energy_model.py  global_memory.py  partition.py  shared_memory.py  warp_scheduler.py
src/systars/stencil/: __init__.py  config.py  files.md  line_buffer.py  mac_array.py  stencil_machine.py  window_former.py
src/systars/util/: __init__.py  commands.py
tests/unit/: test_accumulator.py  test_conv2d.py  test_descriptor_engine.py  test_dma_descriptors.py  test_execute_controller.py  test_gemm_demo.py  test_gemm_e2e.py  test_load_controller.py  test_local_addr.py  test_matmul.py  test_memory_streaming.py  test_mesh.py  test_pe.py  test_pe_array.py  test_scratchpad.py  test_simt_components.py  test_simt_memory.py  test_stencil.py  test_store_controller.py  test_stream_reader.py  test_stream_writer.py  test_systolic_array.py  test_tile.py
verif/cocotb/: conftest.py
verif/cocotb/tests/accumulator/: Makefile  __init__.py  test_accumulator.py
verif/cocotb/tests/mesh/: Makefile
verif/cocotb/tests/pe/: Makefile  test_pe.py
verif/cocotb/tests/pe_array/: Makefile  test_pe_array.py
verif/cocotb/tests/scratchpad/: Makefile  __init__.py  test_scratchpad.py
verif/cocotb/tests/systolic_array/: Makefile  test_systolic_array.py
verif/cocotb/tests/tile/: Makefile  test_tile.py
