[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "systars"
version = "0.1.0"
description = "A Python-based systolic array RTL generator using Amaranth HDL"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Stillwater" }
]
keywords = ["hdl", "rtl", "systolic-array", "dnn", "accelerator", "amaranth", "fpga"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "amaranth>=0.5.0",
    "amaranth-boards>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
sim = [
    "pyvcd>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/stillwater/systars"
Repository = "https://github.com/stillwater/systars"

[tool.hatch.build.targets.wheel]
packages = ["src/systars"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
